objects/PAYBASE2__Payment_Field_Mapping__c.object
<CustomObject>
    <description>When creating a payment from another object, describes which fields to copy from that object to the payment object</description>
    <fields>
        <fullName>PAYBASE2__Amount__c</fullName>
        <description>The field in the source object to copy in the payment Amount field</description>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Key_Prefix__c</fullName>
        <description>The key prefix (three character string that uniquely identifies every object type in Salesforce) of the source object being mapped</description>
        <label>Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Link__c</fullName>
        <description>The field in the destination Payment object to be populated with the id of the source object so that the payment is linked to it, e.g. &quot;Created_From_Account__c&quot;</description>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Object_Name__c</fullName>
        <description>The name of the source object, e.g. Account</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Other_Links__c</fullName>
        <label>Other Links</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Type__c</fullName>
        <description>This field is redundant and should not be used</description>
        <label>Old Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYCP2__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__City__c</fullName>
        <description>Field in source object to populate payment address city field</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Country__c</fullName>
        <description>Field in source object to populate payment address country field</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Description__c</fullName>
        <description>Field in source object to populate payment description field</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Email__c</fullName>
        <description>Field in source object to populate payment email field</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Name__c</fullName>
        <description>Field in source object to populate payment card holder&apos;s name field</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Postcode__c</fullName>
        <description>Field in source object to populate payment address postcode field</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__State__c</fullName>
        <description>Field in source object to populate payment address state field</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Street__c</fullName>
        <description>Field in source object to populate payment address street field</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payonomy Payment Field Mapping</label>
    <listViews>
        <fullName>PAYBASE2__All</fullName>
        <columns>NAME</columns>
        <columns>PAYBASE2__Amount__c</columns>
        <columns>PAYBASE2__Key_Prefix__c</columns>
        <columns>PAYBASE2__Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PAYBASE2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payonomy Payment Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payonomy Payment Field Mappings</pluralLabel>
    <recordTypes>
        <fullName>PAYCP2__Card_Payment</fullName>
        <active>true</active>
        <description>Card payment field mapping</description>
        <label>Card Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>